Fix: Added start script in package.json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "dependencies": {
-    "express": "^5.1.0"
-  },
-  "name": "github-action",
+  "name": "github-actions-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
